# FastApiCalc

./: .env.example  .gitignore  ENVIRONMENT_VERIFIED.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  conftest.py  pre-commit-check.sh  pyproject.toml  setup-complete.sh  start.sh
.github/workflows/: ci.yml
app/: main.py
app/api/endpoints/: calculator.py
app/core/: config.py  dependencies.py
app/static/: index.html  script.js  style.css
docs/screenshots/: README.md
domain/: __init__.py
domain/interfaces/: __init__.py  logger.py  operations.py
domain/models/: __init__.py  request.py  response.py
domain/operations/: __init__.py  basic.py  factory.py
domain/services/: __init__.py  calculator.py  logger.py
tests/e2e/: test_ui.py
tests/integration/: test_api.py
tests/unit/: test_calculator.py  test_operations.py
